feat(twitter): add dep, credentials for twitter

--- a/binci.yml
+++ b/binci.yml
@@ -1,4 +1,9 @@
 from: mhart/alpine-node:8
+env:
+  - TWITTER_ACCESS_TOKEN_KEY=${TWITTER_ACCESS_TOKEN_KEY}
+  - TWITTER_ACCESS_TOKEN_SECRET=${TWITTER_ACCESS_TOKEN_SECRET}
+  - TWITTER_CONSUMER_KEY=${TWITTER_CONSUMER_KEY}
+  - TWITTER_CONSUMER_SECRET=${TWITTER_CONSUMER_SECRET}
 tasks:
   env: env | sort
   shell: /bin/sh
