--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "author": "Kent Safranski <fluidbyte>",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.5.0",
     "emoji-regex": "^6.5.1",
-    "request": "^2.83.0"
+    "request": "^2.83.0",
+    "url-unshort": "^5.0.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
