--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bluebird": "^3.5.0",
     "emoji-regex": "^6.5.1",
     "request": "^2.83.0",
+    "require-dir": "^0.3.2",
     "url-unshort": "^5.0.0"
   },
   "devDependencies": {
