feat(client): setting up initial client app and service

--- a/binci.yml
+++ b/binci.yml
@@ -1,5 +1,8 @@
 from: mhart/alpine-node:8
+expose:
+  - 8080:8080
 env:
+  - PORT=8080
   - TWITTER_ACCESS_TOKEN_KEY=${TWITTER_ACCESS_TOKEN_KEY}
   - TWITTER_ACCESS_TOKEN_SECRET=${TWITTER_ACCESS_TOKEN_SECRET}
   - TWITTER_CONSUMER_KEY=${TWITTER_CONSUMER_KEY}
