--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "dependencies": {
     "bluebird": "^3.5.0",
     "emoji-regex": "^6.5.1",
+    "express": "^4.16.1",
     "request": "^2.83.0",
     "require-dir": "^0.3.2",
+    "socket.io": "^2.0.3",
     "url-unshort": "^5.0.0"
   },
   "devDependencies": {
