--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chai": "^4.1.2",
     "dirty-chai": "^2.0.1",
     "istanbul": "^0.4.5",
+    "jspm": "^0.16.53",
     "mocha": "^3.5.3",
     "nodemon": "^1.12.1",
     "sinon": "^4.0.0",
@@ -48,5 +49,21 @@
       "sandbox",
       "xit"
     ]
+  },
+  "jspm": {
+    "directories": {
+      "packages": "client/jspm_packages"
+    },
+    "configFile": "client/config.js",
+    "dependencies": {
+      "react": "npm:react@^16.0.0",
+      "react-bootstrap": "npm:react-bootstrap@^0.31.3",
+      "react-dom": "npm:react-dom@^16.0.0"
+    },
+    "devDependencies": {
+      "babel": "npm:babel-core@^5.8.24",
+      "babel-runtime": "npm:babel-runtime@^5.8.24",
+      "core-js": "npm:core-js@^1.1.4"
+    }
   }
 }
