--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
       "react": "npm:react@^16.0.0",
       "react-bootstrap": "npm:react-bootstrap@^0.31.3",
       "react-dom": "npm:react-dom@^16.0.0",
-      "socket.io-client": "github:socketio/socket.io-client@^2.0.3"
+      "socket.io-client": "npm:socket.io-client@^2.0.3"
     },
     "devDependencies": {
       "babel": "npm:babel-core@^5.8.24",
