ref(client): refactor to replace JSPM with webpack

--- a/binci.yml
+++ b/binci.yml
@@ -20,4 +20,5 @@ tasks:
   mocha:watch: yarn run mocha:watch
   cover: yarn run cover
   test: yarn run test
+  bundle: yarn run bundle
   up: node index.js
