--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "mocha": "mocha",
     "mocha:watch": "$(npm bin)/nodemon --exec \"mocha || exit 1\"",
     "cover": "istanbul cover _mocha",
-    "test": "yarn run lint && yarn run cover"
+    "test": "yarn run lint && yarn run cover",
+    "bundle": "webpack"
   },
   "author": "Kent Safranski <fluidbyte>",
   "license": "ISC",
@@ -16,21 +17,40 @@
     "bluebird": "^3.5.0",
     "emoji-regex": "^6.5.1",
     "express": "^4.16.1",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "request": "^2.83.0",
     "require-dir": "^0.3.2",
     "socket.io": "^2.0.3",
+    "socket.io-client": "^2.0.3",
     "url-unshort": "^5.0.0"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "chai": "^4.1.2",
     "dirty-chai": "^2.0.1",
     "istanbul": "^0.4.5",
-    "jspm": "^0.16.53",
     "mocha": "^3.5.3",
     "nodemon": "^1.12.1",
+    "react-bootstrap": "^0.31.3",
+    "react-hot-loader": "^1.3.1",
     "sinon": "^4.0.0",
     "sinon-chai": "^2.13.0",
-    "standard": "^10.0.3"
+    "standard": "^10.0.3",
+    "webpack": "^3.6.0",
+    "webpack-dev-server": "^2.9.1",
+    "webpack-hot-middleware": "^2.19.1"
+  },
+  "babel": {
+    "presets": [
+      "es2015",
+      "stage-0",
+      "react"
+    ]
   },
   "standard": {
     "ignore": [
@@ -49,22 +69,5 @@
       "sandbox",
       "xit"
     ]
-  },
-  "jspm": {
-    "directories": {
-      "packages": "client/jspm_packages"
-    },
-    "configFile": "client/config.js",
-    "dependencies": {
-      "react": "npm:react@^16.0.0",
-      "react-bootstrap": "npm:react-bootstrap@^0.31.3",
-      "react-dom": "npm:react-dom@^16.0.0",
-      "socket.io-client": "npm:socket.io-client@^2.0.3"
-    },
-    "devDependencies": {
-      "babel": "npm:babel-core@^5.8.24",
-      "babel-runtime": "npm:babel-runtime@^5.8.24",
-      "core-js": "npm:core-js@^1.1.4"
-    }
   }
 }
