--- a/binci.yml
+++ b/binci.yml
@@ -18,4 +18,5 @@ tasks:
   cover: yarn run cover
   test: yarn run test
   bundle: yarn run bundle
-  up: node index.js
+  dev: node index.js
+  up: export NODE_ENV=production && node index.js
