--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "istanbul": "^0.4.5",
     "mocha": "^3.5.3",
     "nodemon": "^1.12.1",
+    "proxyquire": "^1.8.0",
     "react-bootstrap": "^0.31.3",
     "react-hot-loader": "^1.3.1",
     "sinon": "^4.0.0",
