--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "request": "^2.83.0",
     "require-dir": "^0.3.2",
     "socket.io": "^2.0.3",
-    "socket.io-client": "^2.0.3",
-    "url-unshort": "^5.0.0"
+    "socket.io-client": "^2.0.3"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
