--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
   "license": "ISC",
   "dependencies": {
     "bluebird": "^3.5.0",
+    "elasticsearch": "^13.3.1",
+    "elasticsearch-writable-stream": "^2.0.1",
     "emoji-regex": "^6.5.1",
     "express": "^4.16.1",
+    "ora": "^1.3.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "request": "^2.83.0",
