feat(database): add mapping, indexing and kibana defaults

--- a/binci.yml
+++ b/binci.yml
@@ -15,6 +15,7 @@ env:
   - TWITTER_ACCESS_TOKEN_SECRET=${TWITTER_ACCESS_TOKEN_SECRET}
   - TWITTER_CONSUMER_KEY=${TWITTER_CONSUMER_KEY}
   - TWITTER_CONSUMER_SECRET=${TWITTER_CONSUMER_SECRET}
+  - ES_DEFAULT_INDEX=twitter
 before: |
   export ES_CONN=$ES_KIBANA_PORT_5601_TCP_ADDR
   export ES_PORT=$ES_KIBANA_PORT_9200_TCP_PORT
